Bug 141311 - Missing Decimal Places for Rotation in Sidebar
Summary: Missing Decimal Places for Rotation in Sidebar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Katarina Behrens
URL:
Whiteboard: target:7.3.0 target:7.2.0.0.beta2 tar...
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-29 06:56 UTC by Robert Großkopf
Modified: 2021-06-28 07:56 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Open the attached pdf file. Two screenshot: LO 6.4.7.2 and LO 7.1.2.1 (78.80 KB, application/pdf)
2021-03-29 06:56 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2021-03-29 06:56:12 UTC
Created attachment 170802 [details]
Open the attached pdf file. Two screenshot: LO 6.4.7.2 and LO 7.1.2.1

When drawing a line you could see the rotation in the sidebar of DRAW. The rotation doesn't show the decimal places any more. So the rotation seem to be wrong and the user tries to reset it - without visible result.

The rotation itself is saved with decimal places, but the listbox doesn't show this.

Open the attached pdf file. Shows the whole problem.

Same document in LO 6.4.7.2 and LO 7.1.2.1 on OpenSUSE 15.2 64bit rpm Linux. The bug first appears in LO 7.0.0.3 here. Seems to be introduced with LO 7.*
Comment 1 Harald Berger 2021-03-29 09:31:53 UTC
Is confirmed with:

Version: 7.1.1.2 (x64) / LibreOffice Community
Build ID: fe0b08f4af1bacafe4c7ecc87ce55bb426164676
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: default; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL
Comment 2 Commit Notification 2021-06-18 11:35:36 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7a717c8b9319edcc12e50ab78554b8e0e7049cbf

tdf#141311: Rotation spinbox in sidebar used to have 2 decimal places

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2021-06-21 03:34:24 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/1bec8a3d3b16bb8881bd49f58d8786421ff5f839

tdf#141311: Rotation spinbox in sidebar used to have 2 decimal places

It will be available in 7.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2021-06-21 10:32:32 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/5a15f6dc15449fd83949fbff296fe2f72c20639f

tdf#141311: Rotation spinbox in sidebar used to have 2 decimal places

It will be available in 7.1.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.