tdf#141311: Rotation spinbox in sidebar used to have 2 decimal places

regression from weld-ing (c85fcc6e1994eb8e079aaca85066ab4d67149c15)

Change-Id: Iad0725fd4542ecdddb65092846dbf9d103016d9a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117408
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <bubli@bubli.org>